--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -64,7 +64,7 @@
 
 {% block theme %}
 import '/themes/tokyonight-light.scss'
-import 'highlight.js/styles/tokyo-night-dark.css'
+import 'highlight.js/styles/tokyo-night-light.css'
 {% endblock %}
 
 {% block slides %}
@@ -918,8 +918,8 @@ class GCDMMIOBlackBox(val w: Int)
     <p class="center fragment"><strong>Demo:</strong> Integrating IP from another design language to perform full system SoC-level evaluation</p>
   </section>
 
-  <section class="center">
-    <h3>Step 1 : Generate RTL from your HDL (e.g. Calyx)</h3>
+  <section>
+    <h3>Step 1: Generate RTL From Your HDL (e.g. Calyx)</h3>
     <pre data-id="code-animation"><code class="verilog" data-trim>
     component CalyxSumBlackBox(in: 4) -> (out: 4) {
       cells { ... }
@@ -927,13 +927,13 @@ class GCDMMIOBlackBox(val w: Int)
       control { ... }
     }
     </code></pre>
-    <ul>
-      <li class="fragment">Given a input, add it three times to itself and output it</li>
-    </ul>
+    <p class="center fragment">
+      Receive a 4-bit input, add it three times to itself across multiple cycles, then output the result
+    </p>
   </section>
 
-  <section class="center">
-    <h3>Step 2 : Create a BlackBox Module in Chipyard</h3>
+  <section>
+    <h3>Step 2: Create a Verilog BlackBox in Chisel</h3>
     <div class="container" style="grid-template-columns: 1.0fr 1.5fr;">
       <div>
         <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers>
@@ -963,10 +963,9 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section data-auto-animate>
-    <h3>Step 3 : Generate a MMIO wrapper in Chipyard</h3>
+    <h3>Step 3: Generate a MMIO Wrapper in Chipyard</h3>
     <div class="container" style="grid-template-columns: 1.0fr 1.5fr;">
-      <div>
-        <font size="4">
+      <div class="tiny">
         <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="1-35|37-73">
         case class CalyxSumParams(
           address: BigInt = 0x5000,
@@ -1042,7 +1041,6 @@ class GCDMMIOBlackBox(val w: Int)
           }
         }
         </code></pre>
-        </font>
       </div>
       <div>
         <img class="fragment" src="./figs/latte24/calyx-wrapped.svg"/>
@@ -1051,44 +1049,40 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section data-auto-animate>
-    <h3>Step 4 : Add MMIO ports to the bus</h3>
-    <div class="container" style="grid-template-columns: 1.0fr 1.5fr;">
-      <div>
-        <font size="4">
-          <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="">
-          trait CanHaveMMIOCalyxSum { this: BaseSubsystem =>
-            private val pbus = locateTLBusWrapper(PBUS)
+    <h3>Step 4: Add MMIO ports to the Peripheral Bus</h3>
+    <div class="container" style="grid-template-columns: 1.0fr 1fr;">
+      <div class="tiny">
+        <pre data-id="code-animation"><code class="scala" data-trim data-line-numbers="">
+        trait CanHaveMMIOCalyxSum { this: BaseSubsystem =>
+          private val pbus = locateTLBusWrapper(PBUS)
 
-            val calyx_sum_done = p(CalyxSumKey) match {
-              case Some(params) => {
-                val cs = LazyModule(new CalyxSumMMIOWrapper(params, pbus.beatBytes)(p))
-                cs.clockNode := pbus.fixedClockNode
-                pbus.coupleTo("calyx_sum_mmio_wrapper") {
-                  cs.node := TLFragmenter(pbus.beatBytes, pbus.blockBytes) := _
-                }
-
-                // Add port to DigitalTop (just for fun)
-                val calyx_sum_done = InModuleBody {
-                  val done = IO(Output(Bool())).suggestName("calyx_sum_done")
-                  done := cs.module.io.done
-                  done
-                }
-                Some(calyx_sum_done)
+          val calyx_sum_done = p(CalyxSumKey) match {
+            case Some(params) => {
+              val cs = LazyModule(new CalyxSumMMIOWrapper(params, pbus.beatBytes)(p))
+              cs.clockNode := pbus.fixedClockNode
+              pbus.coupleTo("calyx_sum_mmio_wrapper") {
+                cs.node := TLFragmenter(pbus.beatBytes, pbus.blockBytes) := _
               }
-              case None => None
-            }
-          }
 
-          // DOC include start: DigitalTop
-          class DigitalTop(implicit p: Parameters) extends ChipyardSystem
-            ...
-            // Enables optionally adding a Calyx generated module as a MMIO device
-            with chipyard.example.CanHaveMMIOCalyxSum
-          {
-            override lazy val module = new DigitalTopModule(this)
+              // Add port to DigitalTop (just for fun)
+              val calyx_sum_done = InModuleBody {
+                val done = IO(Output(Bool())).suggestName("calyx_sum_done")
+                done := cs.module.io.done
+                done
+              }
+              Some(calyx_sum_done)
+            }
+            case None => None
           }
-          </code></pre>
-        </font>
+        }
+
+        class DigitalTop(implicit p: Parameters) extends ChipyardSystem
+          // Enables optionally adding a Calyx generated module as a MMIO device
+          with chipyard.example.CanHaveMMIOCalyxSum
+        {
+          override lazy val module = new DigitalTopModule(this)
+        }
+        </code></pre>
       </div>
       <div>
         <img class="fragment" src="./figs/latte24/demo-create-port.svg" />
@@ -1097,7 +1091,7 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section data-auto-animate>
-    <h3>Step 6 : Configure your SoC to use the MMIO module</h3>
+    <h3>Step 5: Configure your SoC to Use the MMIO Module</h3>
     <div class="container" style="grid-template-columns: 1.0fr 1.5fr;">
       <div>
         <font size="5">
@@ -1117,15 +1111,13 @@ class GCDMMIOBlackBox(val w: Int)
         <img class="fragment" src="./figs/latte24/demo-overall-soc.svg" />
       </div>
     </div>
-    <p>At this point, the SoC level configuration is finished</p>
+    <p class="center fragment">At this point, the SoC level configuration is finished</p>
   </section>
 
   <section data-auto-animate>
-    <h3>Step 7 : Write software to talk to the MMIO device</h3>
+    <h3>Step 6: Write Software to Talk to the MMIO Device</h3>
     <font size="4">
-    <pre data-id="code-animation"><code class="cpp" data-trim data-line-numbers="1-36|21-57">
-    ...
-
+    <pre data-id="code-animation"><code class="cpp" data-trim data-line-numbers="1-30|34-51">
     #define CALYX_SUM_BASE 0x5000
     #define CALYX_SUM_ENQ_RDY  (CALYX_SUM_BASE + 0)
     #define CALYX_SUM_ENQ_BITS (CALYX_SUM_BASE + 4)
@@ -1157,8 +1149,6 @@ class GCDMMIOBlackBox(val w: Int)
       return reg_read32(CALYX_SUM_DEQ_BITS);
     }
 
-    ...
-
     #define TEST_SIZE 3
 
     int main() {
@@ -1184,7 +1174,7 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section data-auto-animate>
-    <h3>Step 8 : Run SoC level integration tests</h3>
+    <h3>Step 7: Run SoC-level Integration Tests</h3>
     <pre data-id="code-animation"><code class="bash" data-trim data-line-numbers="5">
     cd chipyard/tests
     make
@@ -1195,7 +1185,7 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section class="center">
-    <h3>Step 8 : Run SoC level integration tests</h3>
+    <h3>Step 7: Run SoC-level Integration Tests</h3>
     <img height=500px; src="./figs/latte24/calyx-uartlog.png" />
   </section>
 
@@ -1203,17 +1193,17 @@ class GCDMMIOBlackBox(val w: Int)
     <h2>Resources</h2>
     <div class="container" style="grid-template-columns: 1.0fr 1.0fr;">
       <div>
-        <img src="./figs/latte24/chipyard-docs.svg"/>
-        <img src="./figs/latte24/firesim-docs.jpg"/>
+        <img class="image" style="object-fit: contain; height: 300px;" src="./figs/latte24/chipyard-docs.svg"/>
       </div>
       <div>
-        <ul>
-          <li><a href="https://chipyard.readthedocs.io/en/stable/">Chipyard docs</a></li>
-          <li><a href="https://docs.fires.im/en/stable/">FireSim docs</a></li>
-          <li><a href="https://fires.im/asplos-2023-tutorial/">Link to previous tutorial recordings</a></li>
-        </ul>
+        <img class="image" style="object-fit: contain; height: 300px;" src="./figs/latte24/firesim-docs.jpg"/>
       </div>
     </div>
+    <ul>
+      <li><a href="https://chipyard.readthedocs.io/en/stable/">Chipyard docs</a></li>
+      <li><a href="https://docs.fires.im/en/stable/">FireSim docs</a></li>
+      <li><a href="https://fires.im/asplos-2023-tutorial/">Link to previous tutorial recordings</a></li>
+    </ul>
   </section>
 </section>
 
