--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -613,8 +613,8 @@ class GCDMMIOBlackBox(val w: Int)
 
   <ol class="smallish">
     <li class="fragment"><strong>Iteration cycle</strong>: build incremental and fast evaluation tools and languages</li>
-    <li class="fragment"><strong>Increase design productivity</strong>: design languages to address the mundane aspects of RTL design</li>
-    <li class="fragment"><strong>Capture design semantics</strong>: target an IR and annotate circuit nodes with semantic information</li>
+    <li class="fragment"><strong>Increase design productivity</strong>: build languages to make RTL design easier</li>
+    <li class="fragment"><strong>Capture design semantics</strong>: build an IR that can be enriched with circuit semantics</li>
   </ol>
 </section>
 
@@ -869,13 +869,11 @@ class GCDMMIOBlackBox(val w: Int)
       </ul>
     </div>
     <div>
-      <font size="6">
       <ul>
         <li class="fragment" data-fragment-index="0">FPGA accelerated RTL simulation platform</li>
-        <li class="fragment">Enables us to perform end-to-end performance evaluation of our designs by running entire RISC-V binaries</li>
+        <li class="fragment">Enables us to perform end-to-end performance evaluation of our designs by running arbitrary RISC-V workloads on top of an OS</li>
         <li class="fragment">Useful for discovering bugs that appear trillions of cycles into simulation</li>
       </ul>
-      </font>
     </div>
   </section>
 
@@ -1212,36 +1210,34 @@ class GCDMMIOBlackBox(val w: Int)
 
 <section>
   <section class="center">
-    <h2>Why have we not reached the next paradigm?</h2>
-  </section>
-
-  <section class="center">
-    <h3>Why have we not reached the next paradigm?</h3>
-    <div class="container" style="grid-template-columns: 1.0fr 1.0fr;">
+    <h2>Are We There Yet?</h2>
+    <div class="container" style="grid-template-columns: 1fr 1fr; column-gap: 2rem;">
       <div>
-        <img src="./figs/latte24/current-paradigm.svg"/>
+        <img style="object-fit: contain; height: 220px;" class="image no-margin" src="./figs/latte24/current-paradigm.svg" />
       </div>
       <div>
-        <ul>
-          <ol class="fragment"><strong class="red">1. Long iteration time</strong>: redudant computations for unchanged parts</ol>
-          <ol class="fragment"><strong class="red">2. Single abstraction</strong>: RTL level</ol>
-          <ol class="fragment"><strong class="red">3. Lost semantics</strong>: semantics are blasted when emitting SV</ol>
-        </ul>
+        <img style="object-fit: contain; height: 220px;" class="image no-margin" src="./figs/latte24/new-paradigm.svg" />
       </div>
     </div>
+
+    <ol style="margin-top: 1rem;">
+      <li class="fragment"><strong class="red">Long iteration time</strong>: generator and simulator is rebuilt for any change</li>
+      <li class="fragment"><strong class="red">Integration of multiple abstractions</strong>: coarse-grained and un-ergonomic</li>
+      <li class="fragment"><strong class="red">Lost semantics</strong>: SystemVerilog is still the lowest common denominator</li>
+    </ol>
+
+    <p class="center fragment">We still have a long way to go</p>
   </section>
 
   <section class="center">
-    <h3>Rest of the talk</h3>
+    <h2>Rest of The Talk</h2>
     <div class="container" style="grid-template-columns: 1.0fr 1.4fr;">
-    <div>
-      <img src="./figs/latte24/tool-stack.svg" />
-    </div>
-    <div>
-      <ul>
-        <li class="fragment">Our vision for rethinking the end-to-end flow for chip design</li>
-      </ul>
-    </div>
+      <div>
+        <img class="image" src="./figs/latte24/tool-stack.svg" />
+      </div>
+      <div>
+        <p class="center">Our vision for the next generation of languages and tools for hardware design</p>
+      </div>
     </div>
   </section>
 </section>
@@ -1254,19 +1250,17 @@ class GCDMMIOBlackBox(val w: Int)
   </section>
 
   <section class="center">
-    <h3>Language Frontend & IR</h3>
-    <div class="container" style="grid-template-columns: 1.4fr 1.0fr;">
+    <h2>Language Frontend & IR</h2>
+    <div class="container" style="grid-template-columns: 1.2fr 1.0fr;">
       <div>
         <img src="./figs/latte24/new-paradigm.svg"/>
       </div>
       <div>
-        <font size="5">
-        <ul>
-          <ol class="fragment"><strong class="green">1. Iteration</strong>: incremental compilation and cacheing</ol>
-          <ol class="fragment"><strong class="green">2. Design productivity</strong>: mixed abstraction by elaboration interop</ol>
-          <ol class="fragment"><strong class="green">3. Semantics preservation</strong>: runtime interop + IR primitives for semantics preservation</ol>
-        </ul>
-        </font>
+        <ol class="smallish">
+          <li class="fragment"><strong class="green">Fast iteration</strong>: incremental compilation and caching at every layer</li>
+          <li class="fragment"><strong class="green">Design productivity</strong>: mixed abstraction frontend by defining elaboration-time interop APIs and semantics</li>
+          <li class="fragment"><strong class="green">Semantics preservation</strong>: native mixed abstraction simulations and rich IR primitives</li>
+        </ol>
       </div>
     </div>
   </section>
